ghc-4335c07/testsuite/tests/rename/should_compile/T11624a.hs
module T11624a where
import {-# SOURCE #-} T11624
import Prelude ()
x = concat 3
