ghc-4335c07/testsuite/tests/rename/should_fail/RnFail047_A.hs

module RnFail047_A (x) where

import RnFail047

x :: Int
x = 3

